# python-quickavro

./: pyproject.toml  setup.cfg  setup.py
